TutorialFrontEnd/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tutorial-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: tutorial.local
      http:
        paths:

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tutorial-backend-service
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: tutorial-frontend-service
                port:
                  number: 80
